--- a/masters_degree_project/notebooks/sentence_decomposition.ipynb
+++ b/masters_degree_project/notebooks/sentence_decomposition.ipynb
@@ -6,14 +6,15 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-19T07:11:09.464614Z",
-     "start_time": "2024-12-19T07:11:08.409848Z"
+     "end_time": "2024-12-19T08:56:56.779136Z",
+     "start_time": "2024-12-19T08:56:55.601872Z"
     }
    },
    "source": [
     "from masters_degree_project.adapters.llm_adapter import LLMAdapter\n",
     "\n",
-    "llm_adapter = LLMAdapter(base_url=\"http://localhost:8085/v1\", api_key=\"masters_degree_project\", model_name=\"gpt-3.5-turbo\")"
+    "llm_adapter = LLMAdapter(base_url=\"http://localhost:8085/v1\", api_key=\"masters_degree_project\",\n",
+    "                         model_name=\"gpt-3.5-turbo\")"
    ],
    "outputs": [],
    "execution_count": 1
@@ -21,8 +22,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-19T07:11:11.121154Z",
-     "start_time": "2024-12-19T07:11:09.469121Z"
+     "end_time": "2024-12-19T08:56:59.916570Z",
+     "start_time": "2024-12-19T08:56:56.782824Z"
     }
    },
    "cell_type": "code",
@@ -31,10 +32,10 @@
     "\n",
     "sentence_decomposition_instruction_template = \"Decompose the same sentence into: entities (only nouns and noun phrases), entity_modifiers (Adjectives), behaviors (only verbs and verb phrases), and behaviour_modifiers (adverbs and related phrases), and main clause:{}\"\n",
     "\n",
-    "\n",
     "input_sentence = \"The quick brown fox jumps over the lazy dog.\"\n",
-    "sentence_decomposition_output = llm_adapter.generate_instruct_result(sentence_decomposition_instruction_template.format(input_sentence),\n",
-    "                                                                         SentenceDecompositionOutput)\n",
+    "sentence_decomposition_output = llm_adapter.generate_instruct_result(\n",
+    "    sentence_decomposition_instruction_template.format(input_sentence),\n",
+    "    SentenceDecompositionOutput)\n",
     "sentence_decomposition_output"
    ],
    "id": "66ba4a7f34e5e1d9",
@@ -42,7 +43,7 @@
     {
      "data": {
       "text/plain": [
-       "SentenceDecompositionOutput(entity_modifiers_pairs=[EntityModifiersPair(entity='fox', entity_modifiers=['quick', 'brown']), EntityModifiersPair(entity='dog', entity_modifiers=['lazy'])], behavior_modifiers_pairs=[BehaviorModifiersPair(behavior='jumps over', behavior_modifiers=['over'])], main_clause='The quick brown fox jumps over the lazy dog.')"
+       "SentenceDecompositionOutput(entity_modifier_pairs=[EntityModifiersPair(entity='fox', entity_modifiers=['quick', 'brown']), EntityModifiersPair(entity='dog', entity_modifiers=['lazy'])], behavior_modifier_pairs=[BehaviorModifiersPair(behavior='jumps over', behavior_modifiers=['over'])], main_clause='The quick brown fox jumps over the lazy dog.')"
       ]
      },
      "execution_count": 2,
@@ -55,20 +56,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-19T07:11:18.277306Z",
-     "start_time": "2024-12-19T07:11:11.286333Z"
+     "end_time": "2024-12-19T08:57:07.526065Z",
+     "start_time": "2024-12-19T08:57:00.305967Z"
     }
    },
    "cell_type": "code",
    "source": [
     "input_sentences = [\"The quick brown fox jumps over the lazy dog.\",\n",
     "                   \"Some people like to eat ice cream.\",\n",
-    "                     \"The sun rises in the east.\",\n",
-    "                        \"The cat sat on the mat.\",\n",
+    "                   \"The sun rises in the east.\",\n",
+    "                   \"The cat sat on the mat.\",\n",
     "                   \"It is illegal to drive a car without a license.\",\n",
     "                   \"Is it legal to drive a car without a license?\"]\n",
-    "sentence_decomposition_outputs = [llm_adapter.generate_instruct_result(sentence_decomposition_instruction_template.format(input_sentence),\n",
-    "                                                                         SentenceDecompositionOutput) for input_sentence in input_sentences]\n",
+    "sentence_decomposition_outputs = [\n",
+    "    llm_adapter.generate_instruct_result(sentence_decomposition_instruction_template.format(input_sentence),\n",
+    "                                         SentenceDecompositionOutput) for input_sentence in input_sentences]\n",
     "sentence_decomposition_outputs"
    ],
    "id": "dce55a9f54c799d0",
@@ -76,12 +78,12 @@
     {
      "data": {
       "text/plain": [
-       "[SentenceDecompositionOutput(entity_modifiers_pairs=[EntityModifiersPair(entity='fox', entity_modifiers=['quick', 'brown']), EntityModifiersPair(entity='dog', entity_modifiers=['lazy'])], behavior_modifiers_pairs=[BehaviorModifiersPair(behavior='jumps over', behavior_modifiers=['over'])], main_clause='The quick brown fox jumps over the lazy dog.'),\n",
-       " SentenceDecompositionOutput(entity_modifiers_pairs=[EntityModifiersPair(entity='people', entity_modifiers=['some'])], behavior_modifiers_pairs=[BehaviorModifiersPair(behavior='like', behavior_modifiers=['to eat'])], main_clause='Some people like to eat ice cream.'),\n",
-       " SentenceDecompositionOutput(entity_modifiers_pairs=[EntityModifiersPair(entity='sun', entity_modifiers=['the'])], behavior_modifiers_pairs=[BehaviorModifiersPair(behavior='rises', behavior_modifiers=['in the east'])], main_clause='The sun rises in the east.'),\n",
-       " SentenceDecompositionOutput(entity_modifiers_pairs=[EntityModifiersPair(entity='cat', entity_modifiers=['the']), EntityModifiersPair(entity='mat', entity_modifiers=['the'])], behavior_modifiers_pairs=[BehaviorModifiersPair(behavior='sat', behavior_modifiers=['on'])], main_clause='The cat sat on the mat.'),\n",
-       " SentenceDecompositionOutput(entity_modifiers_pairs=[EntityModifiersPair(entity='car', entity_modifiers=['without'])], behavior_modifiers_pairs=[BehaviorModifiersPair(behavior='drive', behavior_modifiers=['illegal'])], main_clause='It is illegal to drive a car without a license'),\n",
-       " SentenceDecompositionOutput(entity_modifiers_pairs=[EntityModifiersPair(entity='car', entity_modifiers=['without'])], behavior_modifiers_pairs=[BehaviorModifiersPair(behavior='drive', behavior_modifiers=['it'])], main_clause='Is it legal to drive a car without a license?')]"
+       "[SentenceDecompositionOutput(entity_modifier_pairs=[EntityModifiersPair(entity='fox', entity_modifiers=['quick', 'brown']), EntityModifiersPair(entity='dog', entity_modifiers=['lazy'])], behavior_modifier_pairs=[BehaviorModifiersPair(behavior='jumps over', behavior_modifiers=['over'])], main_clause='The quick brown fox jumps over the lazy dog.'),\n",
+       " SentenceDecompositionOutput(entity_modifier_pairs=[EntityModifiersPair(entity='people', entity_modifiers=['some'])], behavior_modifier_pairs=[BehaviorModifiersPair(behavior='like to eat', behavior_modifiers=['to'])], main_clause='Some people like to eat ice cream.'),\n",
+       " SentenceDecompositionOutput(entity_modifier_pairs=[EntityModifiersPair(entity='sun', entity_modifiers=['the'])], behavior_modifier_pairs=[BehaviorModifiersPair(behavior='rises', behavior_modifiers=['in the east'])], main_clause='The sun rises in the east.'),\n",
+       " SentenceDecompositionOutput(entity_modifier_pairs=[EntityModifiersPair(entity='cat', entity_modifiers=['the'])], behavior_modifier_pairs=[BehaviorModifiersPair(behavior='sat', behavior_modifiers=['on the mat'])], main_clause='The cat sat on the mat.'),\n",
+       " SentenceDecompositionOutput(entity_modifier_pairs=[EntityModifiersPair(entity='car', entity_modifiers=['a']), EntityModifiersPair(entity='license', entity_modifiers=['without'])], behavior_modifier_pairs=[BehaviorModifiersPair(behavior='drive', behavior_modifiers=['illegal'])], main_clause='It is illegal to drive a car without a license.'),\n",
+       " SentenceDecompositionOutput(entity_modifier_pairs=[EntityModifiersPair(entity='car', entity_modifiers=['a']), EntityModifiersPair(entity='license', entity_modifiers=['without'])], behavior_modifier_pairs=[BehaviorModifiersPair(behavior='drive', behavior_modifiers=['it'])], main_clause='Is it legal to drive a car without a license?')]"
       ]
      },
      "execution_count": 3,
@@ -90,6 +92,153 @@
     }
    ],
    "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-19T08:57:07.586409Z",
+     "start_time": "2024-12-19T08:57:07.583869Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "main_behaviour_composition_instruction_template = (\n",
+    "    \"Choose one behaviour and it's modifiers that is reflected in the main clause and compose a concise main_behaviour that represents the action in main clause.\"\n",
+    "    \"main_clause: {}, behaviour_modifier_pairs: {}\")\n",
+    "\n",
+    "main_clause = sentence_decomposition_outputs[0].main_clause\n",
+    "behaviour_modifier_pairs = sentence_decomposition_outputs[0].behavior_modifier_pairs"
+   ],
+   "id": "be3942f589d11a8b",
+   "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-19T08:57:07.878339Z",
+     "start_time": "2024-12-19T08:57:07.652053Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from masters_degree_project.domain.main_behaviour_composition_output import MainBehaviourCompositionOutput\n",
+    "\n",
+    "main_behaviour_composition_output = llm_adapter.generate_instruct_result(\n",
+    "    main_behaviour_composition_instruction_template.format(main_clause, behaviour_modifier_pairs),\n",
+    "    MainBehaviourCompositionOutput)\n",
+    "main_behaviour_composition_output"
+   ],
+   "id": "ba5b499e79fb7b80",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MainBehaviourCompositionOutput(main_behaviour='fox leaps')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-19T08:57:09.163837Z",
+     "start_time": "2024-12-19T08:57:07.942004Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "main_behaviour_composition_outputs = [\n",
+    "    llm_adapter.generate_instruct_result(\n",
+    "        main_behaviour_composition_instruction_template.format(sentence_decomposition_output.main_clause,\n",
+    "                                                               sentence_decomposition_output.behavior_modifier_pairs),\n",
+    "        MainBehaviourCompositionOutput) for sentence_decomposition_output in sentence_decomposition_outputs]\n",
+    "main_behaviour_composition_outputs"
+   ],
+   "id": "cbe11bd2ccc50b95",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[MainBehaviourCompositionOutput(main_behaviour='fox leaps'),\n",
+       " MainBehaviourCompositionOutput(main_behaviour='eating ice cream'),\n",
+       " MainBehaviourCompositionOutput(main_behaviour='eastward rising'),\n",
+       " MainBehaviourCompositionOutput(main_behaviour='cat sitting'),\n",
+       " MainBehaviourCompositionOutput(main_behaviour='unlicensed driving'),\n",
+       " MainBehaviourCompositionOutput(main_behaviour='Driving legality')]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-19T08:57:11.993992Z",
+     "start_time": "2024-12-19T08:57:09.227394Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "input_sentence = \"One of the mitigation strategies that was used in the system was to explain the task and the expected output in the prompt of the LLM to guide the output in a certain direction, but this was not always successful, and the hallucinations and omissions were still present in the output.\"\n",
+    "sentence_decomposition_output = llm_adapter.generate_instruct_result(\n",
+    "    sentence_decomposition_instruction_template.format(input_sentence),\n",
+    "    SentenceDecompositionOutput)\n",
+    "sentence_decomposition_output"
+   ],
+   "id": "6a45317a6bde429a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SentenceDecompositionOutput(entity_modifier_pairs=[EntityModifiersPair(entity='mitigation strategies', entity_modifiers=['One']), EntityModifiersPair(entity='system', entity_modifiers=['the'])], behavior_modifier_pairs=[BehaviorModifiersPair(behavior='used in the system', behavior_modifiers=['was']), BehaviorModifiersPair(behavior='explain the task and the expected output', behavior_modifiers=['in the prompt of the LLM to guide the output']), BehaviorModifiersPair(behavior='guide the output in a certain direction', behavior_modifiers=['but this was not always successful'])], main_clause='One of the mitigation strategies that was used in the system was to explain the task and the expected output in the prompt of the LLM to guide the output in a certain direction, but this was not often')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-19T08:57:12.453817Z",
+     "start_time": "2024-12-19T08:57:12.068448Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "\n",
+    "main_behaviour_composition_output = llm_adapter.generate_instruct_result(\n",
+    "    main_behaviour_composition_instruction_template.format(sentence_decomposition_output.main_clause, sentence_decomposition_output.behavior_modifier_pairs),\n",
+    "    MainBehaviourCompositionOutput)\n",
+    "main_behaviour_composition_output"
+   ],
+   "id": "8bc3a7beb35aebf7",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MainBehaviourCompositionOutput(main_behaviour='prompt-guided task explanation with occasional success')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 8
   }
  ],
  "metadata": {
