Update decomposition and composition
(cherry picked from commit 708d81ea36b2192800a8c295b990a108499e91e0)

--- a/masters_degree_project/notebooks/sentence_decomposition_and_composition.ipynb
+++ b/masters_degree_project/notebooks/sentence_decomposition_and_composition.ipynb
@@ -6,15 +6,19 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-19T08:56:56.779136Z",
-     "start_time": "2024-12-19T08:56:55.601872Z"
+     "end_time": "2024-12-19T10:26:35.668470Z",
+     "start_time": "2024-12-19T10:26:34.602659Z"
     }
    },
    "source": [
     "from masters_degree_project.adapters.llm_adapter import LLMAdapter\n",
     "\n",
     "llm_adapter = LLMAdapter(base_url=\"http://localhost:8085/v1\", api_key=\"masters_degree_project\",\n",
-    "                         model_name=\"gpt-3.5-turbo\")"
+    "                         model_name=\"gpt-3.5-turbo\")\n",
+    "import os\n",
+    "os.environ['OPENAI_API_KEY'] = \"masters_degree_project\"\n",
+    "os.environ['OPENAI_API_BASE'] = \"http://localhost:8085/v1\"\n",
+    "os.environ['USER_AGENT'] = 'myagent'"
    ],
    "outputs": [],
    "execution_count": 1
@@ -22,8 +26,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-19T08:56:59.916570Z",
-     "start_time": "2024-12-19T08:56:56.782824Z"
+     "end_time": "2024-12-19T10:26:38.571269Z",
+     "start_time": "2024-12-19T10:26:35.672847Z"
     }
    },
    "cell_type": "code",
@@ -56,8 +60,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-19T08:57:07.526065Z",
-     "start_time": "2024-12-19T08:57:00.305967Z"
+     "end_time": "2024-12-19T10:26:45.805673Z",
+     "start_time": "2024-12-19T10:26:38.736525Z"
     }
    },
    "cell_type": "code",
@@ -81,7 +85,7 @@
        "[SentenceDecompositionOutput(entity_modifier_pairs=[EntityModifiersPair(entity='fox', entity_modifiers=['quick', 'brown']), EntityModifiersPair(entity='dog', entity_modifiers=['lazy'])], behavior_modifier_pairs=[BehaviorModifiersPair(behavior='jumps over', behavior_modifiers=['over'])], main_clause='The quick brown fox jumps over the lazy dog.'),\n",
        " SentenceDecompositionOutput(entity_modifier_pairs=[EntityModifiersPair(entity='people', entity_modifiers=['some'])], behavior_modifier_pairs=[BehaviorModifiersPair(behavior='like to eat', behavior_modifiers=['to'])], main_clause='Some people like to eat ice cream.'),\n",
        " SentenceDecompositionOutput(entity_modifier_pairs=[EntityModifiersPair(entity='sun', entity_modifiers=['the'])], behavior_modifier_pairs=[BehaviorModifiersPair(behavior='rises', behavior_modifiers=['in the east'])], main_clause='The sun rises in the east.'),\n",
-       " SentenceDecompositionOutput(entity_modifier_pairs=[EntityModifiersPair(entity='cat', entity_modifiers=['the'])], behavior_modifier_pairs=[BehaviorModifiersPair(behavior='sat', behavior_modifiers=['on the mat'])], main_clause='The cat sat on the mat.'),\n",
+       " SentenceDecompositionOutput(entity_modifier_pairs=[EntityModifiersPair(entity='cat', entity_modifiers=['the'])], behavior_modifier_pairs=[BehaviorModifiersPair(behavior='sat', behavior_modifiers=['on'])], main_clause='The cat sat on the mat.'),\n",
        " SentenceDecompositionOutput(entity_modifier_pairs=[EntityModifiersPair(entity='car', entity_modifiers=['a']), EntityModifiersPair(entity='license', entity_modifiers=['without'])], behavior_modifier_pairs=[BehaviorModifiersPair(behavior='drive', behavior_modifiers=['illegal'])], main_clause='It is illegal to drive a car without a license.'),\n",
        " SentenceDecompositionOutput(entity_modifier_pairs=[EntityModifiersPair(entity='car', entity_modifiers=['a']), EntityModifiersPair(entity='license', entity_modifiers=['without'])], behavior_modifier_pairs=[BehaviorModifiersPair(behavior='drive', behavior_modifiers=['it'])], main_clause='Is it legal to drive a car without a license?')]"
       ]
@@ -96,8 +100,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-19T08:57:07.586409Z",
-     "start_time": "2024-12-19T08:57:07.583869Z"
+     "end_time": "2024-12-19T10:26:45.903727Z",
+     "start_time": "2024-12-19T10:26:45.901395Z"
     }
    },
    "cell_type": "code",
@@ -106,7 +110,7 @@
     "    \"Choose one behaviour and it's modifiers that is reflected in the main clause and compose a concise main_behaviour that represents the action in main clause.\"\n",
     "    \"main_clause: {}, behaviour_modifier_pairs: {}\")\n",
     "\n",
-    "main_clause = sentence_decomposition_outputs[0].main_clause\n",
+    "main_clause = sentence_decomposition_outputs[0].concise_main_clause\n",
     "behaviour_modifier_pairs = sentence_decomposition_outputs[0].behavior_modifier_pairs"
    ],
    "id": "be3942f589d11a8b",
@@ -116,8 +120,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-19T08:57:07.878339Z",
-     "start_time": "2024-12-19T08:57:07.652053Z"
+     "end_time": "2024-12-19T10:26:46.222208Z",
+     "start_time": "2024-12-19T10:26:46.000256Z"
     }
    },
    "cell_type": "code",
@@ -147,15 +151,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-19T08:57:09.163837Z",
-     "start_time": "2024-12-19T08:57:07.942004Z"
+     "end_time": "2024-12-19T10:26:47.493235Z",
+     "start_time": "2024-12-19T10:26:46.305866Z"
     }
    },
    "cell_type": "code",
    "source": [
     "main_behaviour_composition_outputs = [\n",
     "    llm_adapter.generate_instruct_result(\n",
-    "        main_behaviour_composition_instruction_template.format(sentence_decomposition_output.main_clause,\n",
+    "        main_behaviour_composition_instruction_template.format(sentence_decomposition_output.concise_main_clause,\n",
     "                                                               sentence_decomposition_output.behavior_modifier_pairs),\n",
     "        MainBehaviourCompositionOutput) for sentence_decomposition_output in sentence_decomposition_outputs]\n",
     "main_behaviour_composition_outputs"
@@ -168,7 +172,7 @@
        "[MainBehaviourCompositionOutput(main_behaviour='fox leaps'),\n",
        " MainBehaviourCompositionOutput(main_behaviour='eating ice cream'),\n",
        " MainBehaviourCompositionOutput(main_behaviour='eastward rising'),\n",
-       " MainBehaviourCompositionOutput(main_behaviour='cat sitting'),\n",
+       " MainBehaviourCompositionOutput(main_behaviour='cat positioning'),\n",
        " MainBehaviourCompositionOutput(main_behaviour='unlicensed driving'),\n",
        " MainBehaviourCompositionOutput(main_behaviour='Driving legality')]"
       ]
@@ -183,8 +187,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-19T08:57:11.993992Z",
-     "start_time": "2024-12-19T08:57:09.227394Z"
+     "end_time": "2024-12-19T10:26:50.001988Z",
+     "start_time": "2024-12-19T10:26:47.582951Z"
     }
    },
    "cell_type": "code",
@@ -200,7 +204,7 @@
     {
      "data": {
       "text/plain": [
-       "SentenceDecompositionOutput(entity_modifier_pairs=[EntityModifiersPair(entity='mitigation strategies', entity_modifiers=['One']), EntityModifiersPair(entity='system', entity_modifiers=['the'])], behavior_modifier_pairs=[BehaviorModifiersPair(behavior='used in the system', behavior_modifiers=['was']), BehaviorModifiersPair(behavior='explain the task and the expected output', behavior_modifiers=['in the prompt of the LLM to guide the output']), BehaviorModifiersPair(behavior='guide the output in a certain direction', behavior_modifiers=['but this was not always successful'])], main_clause='One of the mitigation strategies that was used in the system was to explain the task and the expected output in the prompt of the LLM to guide the output in a certain direction, but this was not often')"
+       "SentenceDecompositionOutput(entity_modifier_pairs=[EntityModifiersPair(entity='mitigation strategies', entity_modifiers=['One']), EntityModifiersPair(entity='system', entity_modifiers=['the'])], behavior_modifier_pairs=[BehaviorModifiersPair(behavior='used in the system', behavior_modifiers=['was']), BehaviorModifiersPair(behavior='explain the task and the expected output', behavior_modifiers=['in the prompt of the LLM to guide the output in a certain direction'])], main_clause='One of the mitigation strategies that was used in the system was to explain the task and the expected output in the prompt of the LLM to guide the output in a certain direction, but this was not often')"
       ]
      },
      "execution_count": 7,
@@ -213,15 +217,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-19T08:57:12.453817Z",
-     "start_time": "2024-12-19T08:57:12.068448Z"
+     "end_time": "2024-12-19T10:26:50.381930Z",
+     "start_time": "2024-12-19T10:26:50.076207Z"
     }
    },
    "cell_type": "code",
    "source": [
     "\n",
     "main_behaviour_composition_output = llm_adapter.generate_instruct_result(\n",
-    "    main_behaviour_composition_instruction_template.format(sentence_decomposition_output.main_clause, sentence_decomposition_output.behavior_modifier_pairs),\n",
+    "    main_behaviour_composition_instruction_template.format(sentence_decomposition_output.concise_main_clause, sentence_decomposition_output.behavior_modifier_pairs),\n",
     "    MainBehaviourCompositionOutput)\n",
     "main_behaviour_composition_output"
    ],
@@ -230,7 +234,7 @@
     {
      "data": {
       "text/plain": [
-       "MainBehaviourCompositionOutput(main_behaviour='prompt-guided task explanation with occasional success')"
+       "MainBehaviourCompositionOutput(main_behaviour='prompt-guided explanation')"
       ]
      },
      "execution_count": 8,
